--- a/index.html
+++ b/index.html
@@ -222,7 +222,11 @@
             </div>
             
             <div style="text-align: center; margin: 2rem 0;" class="no-print">
-                <img src="image_0b311b.jpg" alt="Entwicklung des realen deutschen Bruttoinlandsprodukts" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+                <img src="bip.jpg" alt="Entwicklung des realen deutschen Bruttoinlandsprodukts" onerror="this.style.display='none'; document.getElementById('bip-error').style.display='block';" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+                <div id="bip-error" style="display: none; padding: 2rem; background: #fee2e2; border: 2px dashed #ef4444; border-radius: 8px; color: #b91c1c; text-align: center;">
+                    <strong>Das Bild fehlt noch!</strong><br>
+                    Bitte benennen Sie das Statista-Bild in <code>bip.jpg</code> um und legen Sie es genau in den gleichen Ordner wie diese HTML-Datei.
+                </div>
                 <p style="font-size: 0.9rem; color: #6c757d; font-style: italic; margin-top: 0.5rem;">Abbildung 1: Entwicklung des realen deutschen Bruttoinlandsprodukts (BIP) im Zeitverlauf (Quelle: Statista)</p>
             </div>
         </div>
@@ -269,7 +273,11 @@
             </div>
 
             <div style="text-align: center; margin: 2rem 0;" class="no-print">
-                <img src="Bildschirmfoto 2026-02-12 um 09.21.46.png" alt="Säulendiagramm zur Belastung von Unternehmen durch Bürokratie" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+                <img src="buerokratie.png" alt="Säulendiagramm zur Belastung von Unternehmen durch Bürokratie" onerror="this.style.display='none'; document.getElementById('buero-error').style.display='block';" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+                <div id="buero-error" style="display: none; padding: 2rem; background: #fee2e2; border: 2px dashed #ef4444; border-radius: 8px; color: #b91c1c; text-align: center;">
+                    <strong>Das Bild fehlt noch!</strong><br>
+                    Bitte benennen Sie das Screenshot-Bild zur Bürokratie in <code>buerokratie.png</code> um und legen Sie es genau in den gleichen Ordner wie diese HTML-Datei.
+                </div>
                 <p style="font-size: 0.9rem; color: #6c757d; font-style: italic; margin-top: 0.5rem;">Abbildung 2: Der bürokratische Aufwand im Unternehmen in der Zusammenarbeit mit der öffentlichen Verwaltung (vgl. Buch S. 88, M6)</p>
             </div>
 
